--- a/public/index.html
+++ b/public/index.html
@@ -459,7 +459,7 @@
                     batch: document.getElementById('batch').value,
                     difficulty: document.getElementById('difficulty').value,
                     task_type: "computation",
-                    description: document.getElementById('task_prompt').value.substring(0, 100) + '...'
+                    description: document.getElementById('task_prompt')
                 };
 
                 problems.push(problem);
