Add task_prompt to extra_fields in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -536,6 +536,7 @@
                             required_tools: problem.required_tools,
                             scratchpad: problem.scratchpad ? "allowed" : "not_allowed",
                             enable_anthropic_api: problem.enable_anthropic_api,
+                            task_prompt: problem.task_prompt,
                             extra_fields: {
                                 task_prompt: problem.task_prompt,
                                 solution: problem.solution,
