--- a/public/index.html
+++ b/public/index.html
@@ -349,6 +349,12 @@
             </div>
 
             <div class="form-group">
+                <label for="domain" class="required">Domain</label>
+                <input type="text" id="domain" value="mathematics">
+                <small>e.g., mathematics, physics, chemistry, biology</small>
+            </div>
+
+            <div class="form-group">
                 <label for="required_tools" class="required">Required Tools</label>
                 <input disabled type="text" id="required_tools" value="bash, str_replace_editor">
                 <small>Separate multiple tools with commas</small>
@@ -442,6 +448,7 @@
                     problem_id: "191103",
                     conversation_version_id: "1",
                     combined_id: "191103-1",
+                    domain: "mathematics",
                     required_tools: ["bash", "str_replace_editor"],
                     scratchpad: true,
                     enable_anthropic_api: true,
@@ -463,9 +470,10 @@
             function addProblemFromForm() {
                 const problemId = document.getElementById('problem_id').value.trim();
                 const conversationVersionId = document.getElementById('conversation_version_id').value.trim();
+                const domain = document.getElementById('domain').value.trim();
                 
-                if (!problemId || !conversationVersionId) {
-                    alert('Please fill in both Problem ID and Conversation Version ID');
+                if (!problemId || !conversationVersionId || !domain) {
+                    alert('Please fill in Problem ID, Conversation Version ID, and Domain');
                     return;
                 }
 
@@ -480,6 +488,7 @@
                     problem_id: problemId,
                     conversation_version_id: conversationVersionId,
                     combined_id: `${problemId}-${conversationVersionId}`,
+                    domain: domain,
                     required_tools: requiredTools,
                     scratchpad: document.getElementById('scratchpad').checked,
                     enable_anthropic_api: document.getElementById('enable_api').checked,
@@ -531,6 +540,7 @@
                         <div class="problem-details">
                             <div><strong>Description:</strong> ${problem.description}</div>
                             <div><strong>Difficulty:</strong> ${problem.difficulty}</div>
+                            <div><strong>Domain:</strong> ${problem.domain}</div>
                             <div><strong>Tools:</strong> ${problem.required_tools.join(', ')}</div>
                             <div><strong>Conversation ID:</strong> ${problem.problem_id} (v${problem.conversation_version_id})</div>
                         </div>
@@ -579,8 +589,7 @@
                                 description: problem.description,
                                 solution: problem.solution,
                                 batch: problem.batch,
-                                conversation_id: problem.problem_id,
-                                conversation_version_id: problem.conversation_version_id
+                                domain: problem.domain
                             }
                         }))
                     }
